removed remote apps opening on serve

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "nx": "nx",
     "start": "ng serve",
     "serve:api": "nx run api:serve",
-    "serve:ledger": "ng serve --project ledger --watch --port=4200 --open",
-    "serve:dashboard": "ng serve --project dashboard --watch --port=4201",
-    "serve:primary": "nx run primary:serve --port=4202 --open",
-    "serve:secondary": "nx run secondary:serve --port=4203 --open",
+    "serve:ledger": "ng serve --project ledger --watch --port=4200",
+    "serve:dashboard": "ng serve --project dashboard --watch --port=4201 --open",
+    "serve:primary": "nx run primary:serve --port=4202",
+    "serve:secondary": "nx run secondary:serve --port=4203",
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:ledger\" \"npm run serve:dashboard\" \"npm run serve:primary\" \"npm run serve:secondary\"",
     "build": "ng build",
     "test": "ng test",
