--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "ng serve",
     "serve:api": "nx run api:serve",
     "serve:ledger": "ng serve --project ledger --watch --port=4200",
-    "serve:dashboard": "ng serve --project dashboard --watch --port=4201 --open",
+    "serve:dashboard": "ng serve --project dashboard --watch --port=4201",
     "serve:primary": "nx run primary:serve --port=4202",
     "serve:secondary": "nx run secondary:serve --port=4203",
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:ledger\" \"npm run serve:dashboard\" \"npm run serve:primary\" \"npm run serve:secondary\"",
@@ -62,6 +62,7 @@
     "@ngrx/store-devtools": "^10.0.1",
     "@nrwl/angular": "10.3.3",
     "concurrently": "^5.3.0",
+    "ngx-socket-io": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "uuid": "^8.3.1",
