--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "nx": "nx",
     "start": "ng serve",
     "serve:api": "nx run api:serve",
-    "serve:ledger": "ng serve --project ledger --watch --port=4200",
-    "serve:dashboard": "ng serve --project dashboard --watch --port=4201",
-    "serve:primary": "nx run primary:serve --port=4202",
-    "serve:secondary": "nx run secondary:serve --port=4203",
-    "serve:partner": "nx run partner:serve --port=4204",
+    "serve:ledger": "ng serve --project ledger --watch --port=4200 --open",
+    "serve:dashboard": "ng serve --project dashboard --watch --port=4201 --open",
+    "serve:primary": "nx run primary:serve --port=4202 --open",
+    "serve:secondary": "nx run secondary:serve --port=4203 --open",
+    "serve:partner": "nx run partner:serve --port=4204 --open",
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:ledger\" \"npm run serve:dashboard\"",
     "build": "ng build",
     "test": "ng test",
