--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "nx": "nx",
     "start": "ng serve",
     "serve:api": "nx run api:serve",
-    "serve:ledger": "ng serve --project ledger --watch --port=4200 --open",
-    "serve:dashboard": "ng serve --project dashboard --watch --port=4201 --open",
+    "serve:ledger": "nx run ledger:serve --port=4200 --open",
+    "serve:dashboard": "nx run dashboard:serve --port=4201 --open",
     "serve:primary": "nx run primary:serve --port=4202 --open",
     "serve:secondary": "nx run secondary:serve --port=4203 --open",
     "serve:partner": "nx run partner:serve --port=4204 --open",
+    "serve:remotes": "concurrently \"npm run serve:primary\" \"npm run serve:secondary\" \"npm run serve:partner\"",
     "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:ledger\" \"npm run serve:dashboard\"",
     "build": "ng build",
     "test": "ng test",
@@ -39,16 +40,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.0-next.5",
     "@angular/cdk": "^11.0.0",
-    "@angular/common": "11.0.0-next.5",
-    "@angular/compiler": "11.0.0-next.5",
-    "@angular/core": "11.0.0-next.5",
-    "@angular/forms": "11.0.0-next.5",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "11.0.0-next.5",
-    "@angular/platform-browser-dynamic": "11.0.0-next.5",
-    "@angular/router": "11.0.0-next.5",
+    "@angular/animations": "^11.0.0",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/forms": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
     "@nestjs-addons/in-memory-db": "^2.0.3",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
@@ -70,10 +71,9 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "0.1100.0-next.5",
-    "@angular/cli": "11.0.0-next.5",
-    "@angular/compiler-cli": "11.0.0-next.5",
+    "@angular/cli": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^10.1.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
